--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <script type="module" src="/src/basic/1.ts"></script>
+    <script type="module" src="/src/basic/2.ts"></script>
   </body>
 </html>
